@@ -18,10 +18,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 
 */
 
-#ifndef JACK_LOCATION
-#include "config.h"
-#endif
-
+#include "JackConstants.h"
 #include "JackChannel.h"
 #include "JackLibGlobals.h"
 #include "JackServerLaunch.h"
