@@ -23,6 +23,10 @@ Michael Voigt
   Jackdmp changes log
 ---------------------------
 
+2008-11-17 Stephane Letz  <letz@grame.fr>
+
+	* Use JACK_DRIVER_DIR variable in internal clients loader.
+
 2008-11-16 Stephane Letz  <letz@grame.fr>
 
 	* Client and library global context cleanup in case of incorrect shutdown handling (that is applications not correctly closing client after server has shutdown).
